testdata/baselines/reference/conformance/negatedTypeAppliesToFalseBranchOfConditional.errors.txt
negatedTypeAppliesToFalseBranchOfConditional.ts(5,47): error TS2344: Type 'T' does not satisfy the constraint 'number'.
  Type 'string | number' is not assignable to type 'number'.
    Type 'string' is not assignable to type 'number'.


==== negatedTypeAppliesToFalseBranchOfConditional.ts (1 errors) ====
    // https://github.com/Microsoft/TypeScript/issues/26240
    
    type OnlyNumber<T extends number> = T;
    type ToNumber<T extends number | string> =
        T extends string ? undefined : OnlyNumber<T>;
                                                  ~
!!! error TS2344: Type 'T' does not satisfy the constraint 'number'.
!!! error TS2344:   Type 'string | number' is not assignable to type 'number'.
!!! error TS2344:     Type 'string' is not assignable to type 'number'.
    